deploment-and-services-nodeports.yml
# microservice1
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: microservice1
  template:
    metadata:
      labels:
        app: microservice1
    spec:
      containers:
        - image: clageleeesiee/microservice1:2
          imagePullPolicy: IfNotPresent
          name: microservice1
      restartPolicy: Always    

---


# microservice2
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: microservice2
  template:
    metadata:
      labels:
        app: microservice2
    spec:
      containers:
        - image: clageleeesiee/microservice2:1
          imagePullPolicy: IfNotPresent
          name: microservice2
      restartPolicy: Always

---


# NodePort microservice1
apiVersion: v1
kind: Service
metadata:
  name: microservice1
spec:
  ports:
    - nodePort: 32000
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: microservice1
  type: NodePort
 
---


# NodePort microservice1
apiVersion: v1
kind: Service
metadata:
  name: microservice2
spec:
  ports:
    - nodePort: 32500
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: microservice2
  type: NodePort
