microservice1-nodeport-service.yml
apiVersion: v1
kind: Service
metadata:
  name: microservice1
spec:
  ports:
    - nodePort: 31280
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: microservice1
  type: NodePort
