microservice2-nodeport-service.yml
apiVersion: v1
kind: Service
metadata:
  name: microservice2
spec:
  ports:
    - nodePort: 31281
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: microservice2
  type: NodePort
