ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: "*.test"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: microservice1
                port:
                  number: 8080
    - host: "*.test"
      http:
        paths:
          - path: /2
            pathType: Prefix
            backend:
              service:
                name: microservice2
                port:
                  number: 8080
